--- a/quote.html
+++ b/quote.html
@@ -6,6 +6,7 @@
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
         <script src="quote-script.js"></script>
+        <meta name="viewport" content="width=device-width,initial-scale=1.0" charset="UTF-8">
         <title>Random Quote Generator</title>
     </head>
     <body>
